--- a/main.html
+++ b/main.html
@@ -8,6 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<caption>Student Details</caption>
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>AGE</th>
+				<th>BRANCH</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Jane Smith</td>
+				<td>22</td>
+				<td>Mechanical Engineering</td>
+			</tr>
+			<tr>
+				<td>Emily Davis</td>
+				<td>20</td>
+				<td>Electrical Engineering</td>
+			</tr>
+			<tr>
+				<td>Michael Brown</td>
+				<td>23</td>
+				<td>Civil Engineering</td>
+			</tr>
+		</tbody>
+	</table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
