--- a/main.html
+++ b/main.html
@@ -8,27 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table>
-		<caption>Student Details</caption>
+	<table border ="1" style ="background-color : yellow; border:1px solid black ">
+		<caption style="font-weight:bold">Student Details</caption>
 		<thead>
-			<tr>
-				<th>NAME</th>
-				<th>AGE</th>
-				<th>BRANCH</th>
+			<tr style = "border: 1px solid black">
+				<th style = "border: 1px solid black">NAME</th>
+				<th style = "border: 1px solid black">AGE</th>
+				<th style = "border: 1px solid black">BRANCH</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>Jane Smith</td>
-				<td>22</td>
-				<td>Mechanical Engineering</td>
+			<tr style = "border: 1px solid black">
+				<td style = "border: 1px solid black">Jane Smith</td>
+				<td style = "border: 1px solid black">22</td>
+				<td style = "border: 1px solid black">Mechanical Engineering</td>
 			</tr>
-			<tr>
-				<td>Emily Davis</td>
-				<td>20</td>
-				<td>Electrical Engineering</td>
+			<tr style = "border: 1px solid black">
+				<td style = "border: 1px solid black">Emily Davis</td>
+				<td style = "border: 1px solid black">20</td>
+				<td style = "border: 1px solid black">Electrical Engineering</td>
 			</tr>
-			<tr>
+			<tr style = "border: 1px solid black">
 				<td>Michael Brown</td>
 				<td>23</td>
 				<td>Civil Engineering</td>
